[project]
name = "m13-business-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-countries>=7.6.1",
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-mass-edit>=3.5.0",
    "django-mathfilters>=1.0.0",
    "django-pgviews>=0.6.0",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "dropbox>=12.0.2",
    "gunicorn>=23.0.0",
    "ipdb>=0.13.13",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "xmltodict>=1.0.2",
]
